--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
     <div class="container">
       <div class="widget">
         <div class="date-time">
-          <h5 class="card-title">Aug. 23rd, 2022</h5>
-          <p class="card-text">4:35 PM</p>
+          <h5 class="card-title" id="date-year">Aug. 23rd, 2022</h5>
+          <p class="card-text" id="clock">4:35 PM</p>
         </div>
-        <div class="location">Montreal</div>
-        <div class="today-temp">23°C | °F</div>
+        <div class="location" id="city-name">Montreal</div>
+        <div class="today-temp" id="temperature">
+          23° <a href="#" class="fahren" id="celsius">C | </a
+          ><a href="#" class="fahren" id="height">°F</a>
+        </div>
         <div class="fivedays">
           <div class="row">
             <div class="col">
@@ -58,10 +61,10 @@
         </div>
         <form>
           <span class="searchbar">
-            <input type="city" placeholder=" search city..." />
+            <input type="city" placeholder=" search city..." id="search-city" />
           </span>
           <span class="search">
-            <button type="button" class="btn btn-outline-light">
+            <button type="button" class="btn btn-outline-light" id="find-city">
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
           </span>
