--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       src="https://kit.fontawesome.com/43c2fd3d5a.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
