Just made the button type submittable

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <input type="city" placeholder=" search city..." id="search-city" />
           </span>
           <span class="search">
-            <button type="button" class="btn btn-outline-light" id="find-city">
+            <button type="submit" class="btn btn-outline-light" id="find-city">
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
           </span>
