--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         </div>
         <div class="location" id="city-name">Montreal</div>
         <div class="today-temp" id="temperature">
-          23° <a href="#" class="fahren" id="celsius">C | </a
-          ><a href="#" class="fahren" id="height">°F</a>
+          23° <span class="fahren" id="celsius">C</span>
         </div>
         <div class="fivedays">
           <div class="row">
