updated search form with new JS

--- a/index.html
+++ b/index.html
@@ -59,9 +59,14 @@
             </div>
           </div>
         </div>
-        <form>
+        <form id="search-form">
           <span class="searchbar">
-            <input type="city" placeholder=" search city..." id="search-city" />
+            <input
+              type="city"
+              placeholder=" search city..."
+              id="search-city"
+              autocomplete="off"
+            />
           </span>
           <span class="search">
             <button type="submit" class="btn btn-outline-light" id="find-city">
