--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="today-temp" id="temperature">
           23° <span class="fahren" id="celsius">C</span>
         </div>
-        <div class="fivedays">
+        <div class="fivedays" id="forecast">
           <div class="row">
             <div class="col">
               SUN<br /><i class="fa-solid fa-cloud-sun"></i><br />20°C
