--- a/index.html
+++ b/index.html
@@ -42,20 +42,25 @@
         </div>
         <div class="fivedays" id="forecast">
           <div class="row">
-            <div class="col">
-              SUN<br /><i class="fa-solid fa-cloud-sun"></i><br />20°C
+            <div class="col" id="weekday">
+              SUN<br /><i class="fa-solid fa-cloud-sun" id="daily-icon"></i
+              ><br /><span id="daily-temp">20°C</span>
             </div>
-            <div class="col">
-              MON<br /><i class="fa-solid fa-cloud-rain"></i><br />24°C
+            <div class="col" id="weekday">
+              MON<br /><i class="fa-solid fa-cloud-rain" id="daily-icon"></i
+              ><br /><span id="daily-temp">24°C</span>
             </div>
-            <div class="col">
-              TUES<br /><i class="fa-solid fa-sun"></i><br />19°C
+            <div class="col" id="weekday">
+              TUES<br /><i class="fa-solid fa-sun" id="daily-icon"></i
+              ><br /><span id="daily-temp">19°C</span>
             </div>
-            <div class="col">
-              WED<br /><i class="fa-solid fa-cloud-sun"></i><br />22°C
+            <div class="col" id="weekday">
+              WED<br /><i class="fa-solid fa-cloud-sun" id="daily-icon"></i
+              ><br /><span id="daily-temp">22°C</span>
             </div>
-            <div class="col">
-              THURS<br /><i class="fa-solid fa-sun"></i><br />23°C
+            <div class="col" id="weekday">
+              THURS<br /><i class="fa-solid fa-sun" id="daily-icon"></i
+              ><br /><span id="daily-temp">23°C</span>
             </div>
           </div>
         </div>
