--- a/index.html
+++ b/index.html
@@ -43,24 +43,34 @@
         <div class="fivedays" id="forecast">
           <div class="row">
             <div class="col" id="weekday">
-              SUN<br /><i class="fa-solid fa-cloud-sun" id="daily-icon"></i
-              ><br /><span id="daily-temp">20°C</span>
+              SUN<br /><img src="http://openweathermap.org/img/wn/50d@2x.png"
+              alt="" width="42" id="daily-icon/><br /><span id="daily-temp"
+                >20°C</span
+              >
             </div>
             <div class="col" id="weekday">
-              MON<br /><i class="fa-solid fa-cloud-rain" id="daily-icon"></i
-              ><br /><span id="daily-temp">24°C</span>
+              MON<br /><img src="http://openweathermap.org/img/wn/50d@2x.png"
+              alt="" width="42" id="daily-icon/><br /><span id="daily-temp"
+                >24°C</span
+              >
             </div>
             <div class="col" id="weekday">
-              TUES<br /><i class="fa-solid fa-sun" id="daily-icon"></i
-              ><br /><span id="daily-temp">19°C</span>
+              TUES<br /><img src="http://openweathermap.org/img/wn/50d@2x.png"
+              alt="" width="42" id="daily-icon/><br /><span id="daily-temp"
+                >19°C</span
+              >
             </div>
             <div class="col" id="weekday">
-              WED<br /><i class="fa-solid fa-cloud-sun" id="daily-icon"></i
-              ><br /><span id="daily-temp">22°C</span>
+              WED<br /><img src="http://openweathermap.org/img/wn/50d@2x.png"
+              alt="" width="42" id="daily-icon/><br /><span id="daily-temp"
+                >22°C</span
+              >
             </div>
             <div class="col" id="weekday">
-              THURS<br /><i class="fa-solid fa-sun" id="daily-icon"></i
-              ><br /><span id="daily-temp">23°C</span>
+              THURS<br /><img src="http://openweathermap.org/img/wn/50d@2x.png"
+              alt="" width="42" id="daily-icon/><br /><span id="daily-temp"
+                >23°C</span
+              >
             </div>
           </div>
         </div>
