--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="today-temp" id="temperature">
           23° <span class="fahren" id="celsius">C</span>
         </div>
+        <div class="description" id="description">cloudy</div>
         <div class="fivedays" id="forecast">
           <div class="row">
             <div class="col" id="weekday">
